Imroving dark & light styles

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,7 +23,7 @@ const navContent = getNavContent(locale);
     >
         <ul class="relative flex flex-row max-[440px]:justify-between justify-center items-center w-full">
             <div 
-                class="absolute top-full hidden left-0 w-full h-auto py-3 mt-2 dark:bg-gray-900 bg-gray-300 max-[285px]:py-6 rounded-md z-9998 px-4"
+                class="absolute top-full hidden left-0 w-full h-auto py-3 mt-2 dark:bg-gray-900 bg-gray-100 dark:drop-shadow-none drop-shadow-md drop-shadow-black/20 max-[285px]:py-6 rounded-md z-9998 px-4"
                 id="responsive-nav"
                 aria-hidden="true"
             >
@@ -70,6 +70,7 @@ const navContent = getNavContent(locale);
                                 <li class="m-0 px-2 mx:px-3 py-0 group">
                                     <button class="outline-none border-none group-hover:text-blue-500 transition-colors flex flex-row items-center justify-center gap-1 text-sm font-medium tracking-normal md:tracking-wider">
                                         { label }
+                                        <span class="mix-blend-multiply"></span>
                                         <i class="icon-[tdesign--work] hidden md:flex"/>
                                     </button>
                                 </li>
@@ -102,7 +103,7 @@ const navContent = getNavContent(locale);
 
                     <div 
                         id="themes-menu"
-                        class="min-w-[150px] absolute right-0 top-full transition-all dark:bg-gray-900 bg-gray-200 rounded-md z-9997 hidden max-[220px]:-right-13"
+                        class="min-w-[150px] absolute right-0 top-full transition-all dark:bg-gray-900 bg-gray-100 dark:drop-shadow-none drop-shadow-md drop-shadow-black/20 rounded-md z-9997 hidden max-[220px]:-right-13"
                         aria-label="Theme choice menu"
                         aria-hidden="true"
                     >
@@ -145,7 +146,7 @@ const navContent = getNavContent(locale);
     
                     <div
                         id="locales-menu"
-                        class="absolute right-0 top-full hidden transition-all dark:bg-gray-900 bg-gray-200 rounded-md z-9997"
+                        class="absolute right-0 top-full hidden transition-all dark:bg-gray-900 bg-gray-100 dark:drop-shadow-none drop-shadow-md drop-shadow-black/20 rounded-md z-9997"
                         aria-label="Language choice menu"
                         aria-hidden="true"
                     >
