--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -20,7 +20,7 @@ const PROJECTS = {
             id: 'angular-framework',
             name: 'Angular',
             image: 'https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angular/angular-original.svg',
-            mainColor: 'bg-angular',
+            mainColor: 'dark:bg-angular bg-red-500/25',
         },
         typescript: {
             id: 'typescript-framework',
@@ -114,7 +114,7 @@ const PROJECTS = {
                                 </div>
                             </div>
                             <div class="flex w-full flex-row justify-start items-center my-3">
-                                <a href={url} class="text-white dark:hover:brightness-125 hover:brightness-90 transition-all px-3 py-2 rounded-xl flex justify-center gap-2 items-center dark:bg-gray-900 bg-gray-300 border dark:border-white/30 border-black/30 group">
+                                <a href={url} class="text-white dark:hover:bg-gray-900/50 hover:bg-gray-200 transition-all px-3 py-2 rounded-xl flex justify-center gap-2 items-center dark:bg-gray-900 bg-gray-100 border dark:border-white/30 dark:hover:border-white/40 hover:border-black/50 border-black/30 dark:drop-shadow-none drop-shadow-md drop-shadow-black/10 group">
                                     <i class="icon-[line-md--link] dark:group-hover:brightness-125 group-hover:brightness-90 dark:text-white text-black" />
                                     <span class="dark:text-white text-black">{translate.projects.preview}</span>
                                 </a>
