--- a/src/components/TrajectorySection.astro
+++ b/src/components/TrajectorySection.astro
@@ -43,7 +43,7 @@ const EXPERIENCES = [
 
     <div class="relative w-full max-w-3xl mx-auto py-10">
         <div
-            class="max-[180px]:hidden absolute left-0 ml-2 md:ml-0 md:left-1/2 top-0 translate-x-0 md:-translate-x-1/2 w-0.5 h-full dark:bg-gray-700 bg-gray-300 rounded-full animate-height-to-full"
+            class="max-[180px]:hidden absolute left-0 ml-2 md:ml-0 md:left-1/2 top-0 translate-x-0 md:-translate-x-1/2 w-0.5 dark:bg-gray-700 bg-gray-300 rounded-full"
             id="timeline-line"
         >
         </div>
@@ -67,7 +67,7 @@ const EXPERIENCES = [
                             />
 
                             <div
-                                class={`bg-transparent dark:md:bg-gray-800 md:bg-gray-300 rounded-2xl shadow-lg max-[180px]:p-0 p-5 experience-card opacity-0 w-full md:w-fit
+                                class={`bg-transparent dark:md:bg-gray-800 md:bg-gray-100 drop-shadow-md drop-shadow-black/10 rounded-2xl shadow-lg max-[180px]:p-0 p-5 experience-card opacity-0 w-full md:w-fit
                                 ${
                                     index % 2 === 0
                                         ? "ml-0 mr-0 md:ml-auto md:mr-8"
@@ -100,7 +100,7 @@ const EXPERIENCES = [
         const $timeline_line = document.getElementById('timeline-line');
         const $experiences_cards = document.querySelectorAll('.experience-card');
 
-        observar($timeline_line, 'animate-height-to-full');
+        observar($timeline_line, 'animate-h-full');
         
         $experiences_cards.forEach((experienceCard) => {
             observar(experienceCard, 'animate-fade-in');
