--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -10,6 +10,7 @@ const PROJECTS = {
       name: translate.projects.calculator.name,
       url: `https://calculator-yarosprojects.vercel.app`,
       image: calculatorImg.src,
+      code_link: 'https://github.com/yarosprojects/calculator-yarosprojects',
       description: [
         translate.projects.calculator.paragraph_1,
         translate.projects.calculator.paragraph_2,
@@ -20,7 +21,7 @@ const PROJECTS = {
             id: 'angular-framework',
             name: 'Angular',
             image: 'https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angular/angular-original.svg',
-            mainColor: 'dark:bg-angular bg-red-500/25',
+            mainColor: 'bg-angular',
         },
         typescript: {
             id: 'typescript-framework',
@@ -32,7 +33,7 @@ const PROJECTS = {
             id: 'tailwindcss-framework',
             name: 'TailwindCSS',
             image: 'https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg',
-            mainColor: 'dark:bg-tailwindcss bg-blue-200',
+            mainColor: 'bg-tailwindcss',
         },
       }
     },
@@ -41,6 +42,7 @@ const PROJECTS = {
       name: translate.projects.tetris.name,
       url: `https://tetris-yarosprojects.vercel.app`,
       image: tetrisImg.src,
+      code_link: 'https://github.com/yarosprojects/tetris-yarosprojects',
       description: [
         translate.projects.tetris.paragraph_1,
         translate.projects.tetris.paragraph_2,
@@ -62,7 +64,7 @@ const PROJECTS = {
             id: 'tailwindcss-framework',
             name: 'TailwindCSS',
             image: 'https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg',
-            mainColor: 'dark:bg-tailwindcss bg-blue-200',
+            mainColor: 'bg-tailwindcss',
         },
       }
     },
@@ -78,7 +80,7 @@ const PROJECTS = {
     <div class="w-full md:max-w-3xl mx-0 md:mx-auto flex flex-col gap-25 md:gap-15 justify-center items-start my-10 rounded-2xl overflow-hidden" id="projects-container">
         {
             Object.values(PROJECTS).map((project) => {
-                const { name, url, image, frameworks } = project;
+                const { name, url, image, code_link, frameworks } = project;
                 return(
                     <div class="flex flex-col md:flex-row gap-6 md:gap-0 justify-between items-start group w-full opacity-0 project-card">
                         <div class="m-0 p-0 overflow-hidden rounded-2xl border border-gray-300 dark:border-gray-800 dark:group-hover:border-gray-700 group-hover:border-gray-300 transition-all">
@@ -99,7 +101,7 @@ const PROJECTS = {
                                             return(
                                                 <li class={`rounded-full px-2 py-1 ${mainColor} flex justify-center items-center gap-2`}>
                                                     <img src={image} alt={`${name} frameworks image`} class="size-4" />
-                                                    <span class="dark:text-white text-black text-base max-[250px]:text-sm md:text-[13px]">
+                                                    <span class="text-white text-base max-[250px]:text-sm md:text-[13px]">
                                                         {name}
                                                     </span>
                                                 </li>
@@ -113,7 +115,11 @@ const PROJECTS = {
                                     ))}
                                 </div>
                             </div>
-                            <div class="flex w-full flex-row justify-start items-center my-3">
+                            <div class="flex w-full flex-row justify-start items-center my-3 gap-2">
+                                <a href={code_link} target="_blank" class="text-white dark:hover:bg-gray-900/50 hover:bg-gray-200 transition-all px-3 py-2 rounded-xl flex justify-center gap-2 items-center dark:bg-gray-900 bg-gray-100 border dark:border-white/30 dark:hover:border-white/40 hover:border-black/50 border-black/30 dark:drop-shadow-none drop-shadow-md drop-shadow-black/10 group">
+                                    <i class="icon-[line-md--github] dark:group-hover:brightness-125 group-hover:brightness-90 dark:text-white text-black" />
+                                    <span class="dark:text-white text-black">Code</span>
+                                </a>
                                 <a href={url} class="text-white dark:hover:bg-gray-900/50 hover:bg-gray-200 transition-all px-3 py-2 rounded-xl flex justify-center gap-2 items-center dark:bg-gray-900 bg-gray-100 border dark:border-white/30 dark:hover:border-white/40 hover:border-black/50 border-black/30 dark:drop-shadow-none drop-shadow-md drop-shadow-black/10 group">
                                     <i class="icon-[line-md--link] dark:group-hover:brightness-125 group-hover:brightness-90 dark:text-white text-black" />
                                     <span class="dark:text-white text-black">{translate.projects.preview}</span>
