Fixid languages button colors

--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -111,6 +111,9 @@ const cfgs_started_at = 2022;
                 </p>
             </div>
             <div class="flex flex-col gap-15 md:gap-3 w-full py-13 md:py-7">
+                <div class="w-full flex justify-start items-center px-4 pt-2">
+                    <span class="text-white/70 text-sm">Tecnologias que uso:</span>
+                </div>
                 <div class="flex flex-col w-full gap-7">
                     <div
                         id="frameworks-container" 
