--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -22,6 +22,7 @@ const creador = translate.creator_name;
 ---
 
 <Layout title="Yaroslav Klymko">
+    <div class="fixed inset-0 z-9000 w-full h-screen backdrop-blur-md hidden animate-fade-in animate-duration-100" id="blurred-area"></div>
     <div class="flex flex-col w-full" id="sections-wrapper" aria-label="Contenedor de las secciones de la página">
 
         {/* INTRODUCTION SECTION */}
