--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,6 +57,7 @@ const previewImage = new URL('/img/preview.png', Astro.site).href;
 
 <script is:inline>
 	document.addEventListener('DOMContentLoaded', function() {
+		console.log("Test");
 		const $web_progress = document.getElementById('web-progress');
 		const navButtons = document.querySelectorAll('#nav ul li button');
 		const sectionsWrapper = document.getElementById('sections-wrapper');
